<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#EEEEEE"
    tools:context=".MainActivity$PlaceholderFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/university_of_manchester_logo"
        android:adjustViewBounds="true"
        android:nestedScrollingEnabled="true"
        android:maxHeight="200sp"
        android:maxWidth="200sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90sp"
        android:gravity="center"
        android:id="@+id/appTitle" />

    <Button
        android:onClick="display_data_options_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_display_data"
        android:textSize="20sp"
        android:id="@+id/dataButton"
        android:width="200dp"
        android:height="60dp"
        android:layout_below="@+id/appTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25sp"
        android:textColor="#FFFFFF"
        android:background="#6B2C91"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_map"
        android:textSize="20sp"
        android:id="@+id/mapButton"
        android:width="200dp"
        android:height="60dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:background="#6B2C91"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/dataButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_settings"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/button3"
        android:width="200dp"
        android:height="60dp"
        android:layout_marginTop="15dp"
        android:background="#6B2C91"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/mapButton" />

    <TextView
        android:text="@string/created_by"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/createdBy" />

</RelativeLayout>